# aiko-coop-ai-rpg

./: .env.example  .gitignore  README.md  gm_memory.json  grok.py  pyproject.toml
app/agents/: base.py  game_master.py  partner.py  storyteller.py
app/core/: turn_engine.py
app/ui/: cli.py
stories/20250602_223846/: gm_memory.json  gm_setup.txt  partner_memory.json  partner_profile.md  partner_setup.txt  starting_scene.txt  story_bible.md  storyteller_memory.json  world_bible.md
stories/20250602_224240/: gm_memory.json  gm_setup.txt  partner_memory.json  partner_profile.md  partner_setup.txt  starting_scene.txt  story_bible.md  storyteller_memory.json  turn_log.jsonl  world_bible.md
stories/20250602_225824/: gm_memory.json  gm_setup.txt  partner_memory.json  partner_profile.md  partner_setup.txt  starting_scene.txt  story_bible.md  storyteller_memory.json  turn_log.jsonl  world_bible.md
stories/20250602_232136/: gm_memory.json  gm_setup.txt  partner_memory.json  partner_profile.md  partner_setup.txt  starting_scene.txt  story_bible.md  storyteller_memory.json  turn_log.jsonl  world_bible.md
stories/20250603_065846/: gm_memory.json  gm_setup.txt  partner_memory.json  partner_profile.md  partner_setup.txt  starting_scene.txt  story_bible.md  storyteller_memory.json  turn_log.jsonl  world_bible.md
stories/20250603_072633/: gm_memory.json  gm_setup.txt  partner_memory.json  partner_profile.md  partner_setup.txt  starting_scene.txt  story_bible.md  storyteller_memory.json  turn_log.jsonl  world_bible.md
stories/20250603_073357/: gm_memory.json  gm_setup.txt  (+8 more)
(+29 files in other folders)
