[project]
name = "aiko-coop-ai-rpg"
version = "0.1.0"
description = "An AI-powered cooperative RPG system"
authors = [
    {name = "Zam Wulfstone"}
]
dependencies = [
    "openai>=1.82.0",
    "pyyaml>=6.0.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
packages = ["app"]